# docs-enterprise/open-api/openapi.yaml
@@ -87,6 +87,18 @@ paths:
     # escape the path name by replacing `{ }` with `%7B %7D`
     $ref: "./permission.yaml#/paths/~1web~1security~1metalakes~1%7Bmetalake%7D~1roles~1%7Brole%7D"
 
+  /web/security/metalakes/{metalake}/users:
+    # escape the path name by replacing `{ }` with `%7B %7D`
+    $ref: "./users.yaml#/paths/~1web~1security~1metalakes~1%7Bmetalake%7D~1users"
+
+  /web/security/metalakes/{metalake}/users/enabled:
+    # escape the path name by replacing `{ }` with `%7B %7D`
+    $ref: "./users.yaml#/paths/~1web~1security~1metalakes~1%7Bmetalake%7D~1users~1enabled"
+
+  /web/security/metalakes/{metalake}/groups:
+    # escape the path name by replacing `{ }` with `%7B %7D`
+    $ref: "./groups.yaml#/paths/~1web~1security~1metalakes~1%7Bmetalake%7D~1groups"
+
 components:
   securitySchemes:
 
